--- a/hw3.qmd
+++ b/hw3.qmd
@@ -1,10 +1,10 @@
 ---
 title: "Homework 3"
-author: "[Insert your name here]{style='background-color: yellow;'}"
+author: "[Kate Miller]{style='background-color: yellow;'}"
 toc: true
 title-block-banner: true
 title-block-style: default
-format: html
+format: pdf
 # format: pdf
 ---
 
@@ -25,7 +25,7 @@ For this assignment, we will be using the [Wine Quality](https://archive.ics.uci
 
 We will be using the following libraries:
 
-```R
+```{R, echo = TRUE}
 library(readr)
 library(tidyr)
 library(dplyr)
@@ -47,14 +47,16 @@ Regression with categorical covariate and $t$-Test
 
 Read the wine quality datasets from the specified URLs and store them in data frames `df1` and `df2`.
 
-```R
+```{R, echo = TRUE}
 url1 <- "https://archive.ics.uci.edu/ml/machine-learning-databases/wine-quality/winequality-white.csv"
 
 url2 <- "https://archive.ics.uci.edu/ml/machine-learning-databases/wine-quality/winequality-red.csv"
 
 
-df1 <- ... # Insert your code here
-df2 <- ... # Insert your code here
+df1 <- read.csv(url1, sep = ";", header = TRUE)
+df1
+df2 <- read.csv(url2, sep = ";", header = TRUE) 
+df2
 ```
 
 ---
@@ -70,8 +72,16 @@ Perform the following tasks to prepare the data frame `df` for analysis:
 1. Remove rows (if any) with missing values.
 
 
-```R
-df <- ... # Insert your code here
+```{R, echo = TRUE}
+
+df <- rbind(cbind(df1, type = "white"), cbind(df2, type = "red"))
+colnames(df) <- gsub(" ", "_", colnames(df))
+df <- df[, !colnames(df) %in% c("fixed_acidity", "free_sulfur_dioxide")]
+df$type <- as.factor(df$type)
+df <- na.omit(df)
+df <- df[, 1:11]
+
+dim(df)
 ```
 
 
@@ -95,10 +105,22 @@ Recall from STAT 200, the method to compute the $t$ statistic for the the differ
 3. Using `sp_squared` and `diff_mean`, compute the $t$ Statistic, and store its value in a variable called `t1`.
 
 
-```R
-diff_mean <- ... # Insert your code here
-sp <-  ... # Insert your code here
-t1 <-  ... # Insert your code here
+```{R, echo = TRUE}
+
+mean_red <- mean(df[df$type == "red", "quality"])
+mean_white <- mean(df[df$type == "white", "quality"])
+diff_mean <- mean_red - mean_white
+# Compute the pooled sample variance
+n_red <- sum(df$type == "red")
+n_white <- sum(df$type == "white")
+
+var_red <- ifelse(sum(!is.na(df[df$type == "red", "quality"])) > 1, var(df[df$type == "red", "quality"], na.rm = TRUE), NA)
+var_white <- ifelse(sum(!is.na(df[df$type == "white", "quality"])) > 1, var(df[df$type == "white", "quality"], na.rm = TRUE), NA)
+
+sp_squared <- ((n_red - 1) * var_red + (n_white - 1) * var_white) / (n_red + n_white - 2)
+
+t1 <- diff_mean / sqrt(sp_squared * (1/n_red + 1/n_white))
+
 ```
 
 
@@ -110,9 +132,14 @@ Equivalently, R has a function called `t.test()` which enables you to perform a 
 
 Perform a two-sample t-test to compare the quality of white and red wines using the `t.test()` function with the setting `var.equal=TRUE`. Store the t-statistic in `t2`.
 
-```R
-t_test <- t.test(...) # Insert your code here
-t2 <- ... # Insert your code here
+```{R, echo = TRUE}
+t_test <- t.test(df[df$type == "white", "quality"], df[df$type == "red", "quality"], var.equal = TRUE)
+
+# Extract t-statistic
+t2 <- t_test$statistict_test <- t_test(df[df$type == "white", "quality"], df[df$type == "red", "quality"], var.equal = TRUE)
+
+
+t2
 ```
 
 ---
@@ -121,9 +148,12 @@ t2 <- ... # Insert your code here
 
 Fit a linear regression model to predict `quality` from `type` using the `lm()` function, and extract the $t$-statistic for the `type` coefficient from the model summary. Store this $t$-statistic in `t3`.
 
-```R
-fit <- lm(...) # Insert your here
-t3 <- ... # Insert your here
+```{R, echo = TRUE}
+
+fit <- lm(quality ~ type, data = df)
+
+t3 <- summary(fit)$coef["type", "t value"]
+
 ```
 
 
@@ -133,8 +163,8 @@ t3 <- ... # Insert your here
 
 Print a vector containing the values of `t1`, `t2`, and `t3`. What can you conclude from this? Why?
 
-```R
-c(t1, t2, t3) # Insert your code here
+```{R}
+c(t1, t2, t3) 
 ```
 
 
@@ -158,8 +188,17 @@ Collinearity
 Fit a linear regression model with all predictors against the response variable `quality`. Use the `broom::tidy()` function to print a summary of the fitted model. What can we conclude from the model summary?
 
 
-```R
-... # Insert your code here
+```{R, echo = TRUE}
+
+fit_all <- lm(quality ~ ., data = df)
+
+if (!requireNamespace("broom", quietly = TRUE)) {
+  install.packages("broom")
+}
+library(broom)
+summary_tidy <- tidy(fit_all)
+print(summary_tidy)
+
 ```
 
 
@@ -170,12 +209,13 @@ Fit a linear regression model with all predictors against the response variable 
 Fit two **simple** linear regression models using `lm()`: one with only `citric_acid` as the predictor, and another with only `total_sulfur_dioxide` as the predictor. In both models, use `quality` as the response variable. How does your model summary compare to the summary from the previous question?
 
 
-```R
-model_citric <- ... # Insert your code here
+```{R, echo = TRUE}
+model_citric <- lm(quality ~ citric_acid, data = df)
+
 ```
 
-```R
-model_sulfur <- ... # Insert your code here
+```{R, echo = TRUE}
+model_sulfur <- lm(quality ~ total_sulfur_dioxide, data = df)
 ```
 
 
@@ -185,8 +225,11 @@ model_sulfur <- ... # Insert your code here
 
 Visualize the correlation matrix of all numeric columns in `df` using `corrplot()`
 
-```R
-df %>% ... # Insert your code here
+```{R, echo = TRUE}
+df %>% 
+  select_if(is.numeric) %>%
+  cor()
+
 ```
 
 
@@ -198,8 +241,12 @@ df %>% ... # Insert your code here
 Compute the variance inflation factor (VIF) for each predictor in the full model using `vif()` function. What can we conclude from this?
 
 
-```R
-... # Insert your code here
+```{R, echo = TRUE}
+
+fit_all <- lm(quality ~ ., data = df)
+
+vif_values <- vif(fit_all)
+vif_values
 ```
 
 
@@ -222,8 +269,16 @@ Variable selection
 
 Run a backward stepwise regression using a `full_model` object as the starting model. Store the final formula in an object called `backward_formula` using the built-in `formula()` function in R
 
-```R
-... # Insert your code here
+```{R, echo = TRUE}
+
+full_model <- lm(quality ~ ., data = df)
+
+backward_model <- step(full_model, direction = "backward")
+
+backward_formula <- formula(backward_model)
+
+print(backward_formula)
+
 ```
 
 ---
@@ -232,8 +287,16 @@ Run a backward stepwise regression using a `full_model` object as the starting m
 
 Run a forward stepwise regression using a `null_model` object as the starting model. Store the final formula in an object called `forward_formula` using the built-in `formula()` function in R
 
-```R
-... # Insert your code here
+```{R, echo = TRUE}
+
+null_model <- lm(quality ~ 1, data = df)
+
+forward_model <- step(null_model, direction = "forward", scope = formula(fit_all))
+
+forward_formula <- formula(forward_model)
+
+print(forward_formula)
+
 ```
 
 
@@ -248,15 +311,23 @@ Run a forward stepwise regression using a `null_model` object as the starting mo
 
 3. Then, use the `cv.glmnet()` function to perform LASSO and Ridge regression with `X` and `y`.
 
-```R
-... # Insert your code here. 
+```{R, echo = TRUE}
+y <- df$quality
+
+X <- model.matrix(fit_all)
+
+lasso_model <- cv.glmnet(x = X, y = y, alpha = 1)  
+ridge_model <- cv.glmnet(x = X, y = y, alpha = 0) 
 ```
 
 Create side-by-side plots of the ridge and LASSO regression results. Interpret your main findings. 
 
-```R
+```{R, echo = TRUE}
 par(mfrow=c(1, 2))
-... # Insert your code here. 
+
+plot(ridge_model, main = "Ridge Regression")
+
+plot(lasso_model, main = "LASSO Regression")
 ```
 
 ---
@@ -267,6 +338,23 @@ Print the coefficient values for LASSO regression at the `lambda.1se` value? Wha
 
 Store the variable names with non-zero coefficients in `lasso_vars`, and create a formula object called `lasso_formula` using the `make_formula()` function provided in the Appendix. 
 
+```{R, echo = TRUE}
+
+y <- df$quality
+
+X <- model.matrix(quality ~ ., data = df)
+
+lasso_model <- cv.glmnet(x = X, y = y, alpha = 1)
+
+coef_values <- coef(lasso_model, s = "lambda.1se")
+print(coef_values)
+
+lasso_vars <- names(coef_values)[coef_values != 0]
+print(lasso_vars)
+
+lasso_formula <- make_formula(lasso_vars)
+print(lasso_formula)
+```
 
 ---
 
@@ -276,6 +364,23 @@ Print the coefficient values for ridge regression at the `lambda.1se` value? Wha
 
 Store the variable names with non-zero coefficients in `ridge_vars`, and create a formula object called `ridge_formula` using the `make_formula()` function provided in the Appendix. 
 
+```{R, echo = TRUE}
+y <- df$quality
+
+X <- model.matrix(quality ~ ., data = df)
+
+ridge_model <- cv.glmnet(x = X, y = y, alpha = 0)
+
+coef_values <- coef(ridge_model, s = "lambda.1se")
+print(coef_values)
+
+ridge_vars <- names(coef_values)[coef_values != 0]
+print(ridge_vars)
+
+ridge_formula <- make_formula(ridge_vars)
+print(ridge_formula)
+
+```
 
 
 ---
@@ -457,7 +562,7 @@ summary_table %>% knitr::kable()
 
 The following function which takes as input a vector of column names `x` and outputs a `formula` object with `quality` as the response variable and the columns of `x` as the covariates. 
 
-```R
+```{R, echo = TRUE}
 make_formula <- function(x){
   as.formula(
     paste("quality ~ ", paste(x, collapse = " + "))
@@ -474,7 +579,7 @@ make_formula(c("a", "b", "c"))
 
 The `make_model_matrix` function below takes a `formula` as input and outputs a **rescaled** model matrix `X` in a format amenable for `glmnet()`
 
-```R
+```{R, echo = TRUE}
 make_model_matrix <- function(formula){
   X <- model.matrix(formula, df)[, -1]
   cnames <- colnames(X)
